--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "encodeurl": "^1.0.2",
     "firebase": "^9.6.8",
     "fortawesome": "^0.0.1-security",
